[tool.poetry]
name = "live-py"
version = "0.1.0-snapshot"
description = ""
authors = ["Vitaly K. <vitaly@vitaly.com.ua>"]
license = "LGPL-2.1-only"

[tool.poetry.dependencies]
python = "^3.8"
mido = "^1.2.10"
python-rtmidi = "^1.4.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
